@@ -1,5 +1,0 @@
-$NetBSD: distinfo,v 1.1 2012/07/10 22:13:48 jmmv Exp $
-
-SHA1 (kyua-atf-compat-0.1.tar.gz) = a2f8eaf02de144c4604ad2dd42b446fa8dfde00f
-RMD160 (kyua-atf-compat-0.1.tar.gz) = 5c9a6c9dd286ab373a39df4a4692622ef694a2a5
-Size (kyua-atf-compat-0.1.tar.gz) = 73743 bytes
