@@ -1,37 +1,0 @@
-@comment $NetBSD: PLIST,v 1.2 2013/12/08 01:21:12 jmmv Exp $
-lib/pkgconfig/kyua-testers.pc
-libexec/kyua-atf-tester
-libexec/kyua-plain-tester
-libexec/kyua-tap-tester
-man/man1/kyua-atf-tester.1
-man/man1/kyua-plain-tester.1
-man/man1/kyua-tap-tester.1
-man/man1/kyua-tester.1
-man/man5/kyua-tester-list.5
-man/man5/kyua-tester-result.5
-man/man7/kyua-atf-interface.7
-man/man7/kyua-plain-interface.7
-man/man7/kyua-tap-interface.7
-share/doc/kyua-testers/AUTHORS
-share/doc/kyua-testers/COPYING
-share/doc/kyua-testers/NEWS
-share/doc/kyua-testers/README
-${TESTS}tests/kyua-testers/Kyuafile
-${TESTS}tests/kyua-testers/atf_helpers
-${TESTS}tests/kyua-testers/atf_inttest
-${TESTS}tests/kyua-testers/atf_list_test
-${TESTS}tests/kyua-testers/atf_result_test
-${TESTS}tests/kyua-testers/cli_test
-${TESTS}tests/kyua-testers/env_test
-${TESTS}tests/kyua-testers/error_test
-${TESTS}tests/kyua-testers/fs_test
-${TESTS}tests/kyua-testers/plain_helpers
-${TESTS}tests/kyua-testers/plain_inttest
-${TESTS}tests/kyua-testers/result_test
-${TESTS}tests/kyua-testers/run_test
-${TESTS}tests/kyua-testers/stacktrace_helper
-${TESTS}tests/kyua-testers/stacktrace_test
-${TESTS}tests/kyua-testers/tap_helpers
-${TESTS}tests/kyua-testers/tap_inttest
-${TESTS}tests/kyua-testers/tap_parser_test
-${TESTS}tests/kyua-testers/text_test
